--- a/presentation/css/main.css
+++ b/presentation/css/main.css
@@ -1,21 +1,60 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
-.first-slide {
-  position: relative; }
-  .first-slide h3 {
-    font-family: 'Roboto', sans-serif; }
-  .first-slide h4 {
-    font-family: 'Roboto', sans-serif; }
-  .first-slide h3, .first-slide h4 {
-    position: relative; }
-  .first-slide .avatar {
-    position: relative;
-    background: none;
-    margin-top: 60px;
-    border: 0;
-    box-shadow: none;
-    top: -35px; }
-  .first-slide .atng-mention {
-    font-size: 22px;
-    position: relative; }
+.first-slide .atng-mention {
+  font-size: 22px; }
+.first-slide p {
+  font-size: 18px; }
+.first-slide .avatar {
+  position: relative;
+  background: none;
+  margin-top: 60px;
+  border: 0;
+  box-shadow: none;
+  margin-top: 50px;
+  top: -15px; }
+.first-slide h3 {
+  font-family: 'Roboto', sans-serif; }
+.first-slide h4 {
+  font-family: 'Roboto', sans-serif; }
+
+.second-slide {
+  height: 100%;
+  width: 100%; }
+  .second-slide h2, .second-slide h4 {
+    font-family: "Roboto", sans-serif;
+    color: #000;
+    margin-bottom: 100px; }
+  .second-slide h4 {
+    color: #fff; }
+  .second-slide img {
+    border: 0 !important;
+    background: none !important;
+    box-shadow: none !important; }
+  .second-slide .arch {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: space-between; }
+  .second-slide .back-tech {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex; }
+    .second-slide .back-tech .fa {
+      align-self: center;
+      margin-left: 30px;
+      color: #000; }
+  .second-slide .front-tech {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex; }
+    .second-slide .front-tech img:first-child {
+      width: 200px;
+      height: 200px; }
+    .second-slide .front-tech .fa {
+      align-self: center;
+      margin-left: 30px;
+      color: #000; }
+    .second-slide .front-tech img {
+      width: 200px;
+      height: 200px; }
 
 /*# sourceMappingURL=main.css.map */
