--- a/presentation/css/main.scss
+++ b/presentation/css/main.scss
@@ -3,32 +3,77 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .first-slide{
-  h3{
-    font-family: 'Roboto', sans-serif;
+  .atng-mention{
+    font-size: 22px;
   }
-  h4{
-    font-family: 'Roboto', sans-serif;
+  p{
+    font-size: 18px;
   }
-  h3, h4{
-    position: relative;
-  }
-  position: relative;
   .avatar{
     position: relative;
     background: none;
     margin-top: 60px;
     border: 0;
     box-shadow: none;
-    top: -35px;
+    margin-top: 50px;
+    top: -15px;
   }
-  .atng-mention{
-    font-size: 22px;
-    position: relative;
+  h3{
+    font-family: 'Roboto', sans-serif;
+  }
+  h4{
+    font-family: 'Roboto', sans-serif;
   }
 }
 
 .second-slide{
-  a{
-    // text-decoration: none;
+  height: 100%;
+  width: 100%;
+  h2, h4{
+    font-family: "Roboto", sans-serif;
+    color: #000;
+    margin-bottom: 100px;
+  }
+  h4{
+    color: #fff;
+  }
+  img{
+    border: 0 !important;
+    background: none !important;
+    box-shadow: none !important;
+  }
+  .arch{
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: space-between;
+  }
+  .back-tech{
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    .fa{
+      align-self: center;
+      margin-left: 30px;
+      color: #000;
+    }
+  }
+  .front-tech{
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    img:first-child{
+      width: 200px;
+      height: 200px;
+    }
+    .fa{
+      align-self: center;
+      margin-left: 30px;
+      color: #000;
+    }
+    img{
+      width: 200px;
+      height: 200px;
+    }
   }
 }
