--- a/presentation/css/main.css
+++ b/presentation/css/main.css
@@ -57,4 +57,8 @@
       width: 200px;
       height: 200px; }
 
+.last-slide {
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif; }
+
 /*# sourceMappingURL=main.css.map */
